--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://harsh1991mishra.github.io/">
   <title>Harsh Mishra | Technical Consultant & Developer</title>
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg?v=2">
   <link rel="canonical" href="https://harsh1991mishra.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@harsh1991mishra" />
@@ -751,6 +751,369 @@
     body.dark-mode .insight-date {
       color: var(--accent);
     }
+
+    /* Chatbot Styles */
+    #harshChatbotWidget {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      width: 400px;
+      height: 600px;
+      display: flex;
+      flex-direction: column;
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
+      z-index: 9999;
+      font-family: inherit;
+    }
+
+    body.dark-mode #harshChatbotWidget {
+      background: var(--secondary);
+      color: white;
+    }
+
+    .chatbot-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
+      padding: 1.5rem;
+      border-radius: 16px 16px 0 0;
+      color: white;
+    }
+
+    .chatbot-header h3 {
+      margin: 0;
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+
+    .chatbot-close {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 1.5rem;
+      cursor: pointer;
+      padding: 0;
+      transition: var(--transition);
+    }
+
+    .chatbot-close:hover {
+      transform: scale(1.2);
+    }
+
+    .chatbot-messages {
+      flex: 1;
+      overflow-y: auto;
+      padding: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      scroll-behavior: smooth;
+    }
+
+    .message {
+      display: flex;
+      animation: fadeInUp 0.3s ease-out;
+    }
+
+    .message.user-message {
+      justify-content: flex-end;
+    }
+
+    .message.ai-message {
+      justify-content: flex-start;
+    }
+
+    .message-content {
+      max-width: 80%;
+      padding: 0.8rem 1rem;
+      border-radius: 12px;
+      word-wrap: break-word;
+      line-height: 1.5;
+      font-size: 0.95rem;
+    }
+
+    .user-message .message-content {
+      background: var(--accent);
+      color: var(--primary);
+      font-weight: 500;
+    }
+
+    .ai-message .message-content {
+      background: rgba(0, 0, 0, 0.08);
+      color: var(--text-dark);
+    }
+
+    body.dark-mode .ai-message .message-content {
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+    }
+
+    .message.error .message-content {
+      background: #fee;
+      color: #c33;
+      font-size: 0.9rem;
+    }
+
+    body.dark-mode .message.error .message-content {
+      background: rgba(255, 100, 100, 0.2);
+      color: #ffb3b3;
+    }
+
+    .typing-indicator {
+      display: inline-flex;
+      gap: 4px;
+      animation: typing 1.4s infinite;
+    }
+
+    @keyframes typing {
+      0%, 60%, 100% { opacity: 0.5; }
+      30% { opacity: 1; }
+    }
+
+    .chatbot-input-area {
+      display: flex;
+      gap: 0.5rem;
+      padding: 1rem;
+      border-top: 1px solid var(--border);
+      background: white;
+    }
+
+    body.dark-mode .chatbot-input-area {
+      background: var(--secondary);
+      border-top-color: var(--border-dark);
+    }
+
+    .chatbot-input {
+      flex: 1;
+      padding: 0.8rem;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      font-family: inherit;
+      font-size: 0.95rem;
+      outline: none;
+      transition: var(--transition);
+    }
+
+    body.dark-mode .chatbot-input {
+      background: rgba(255, 255, 255, 0.1);
+      border-color: var(--border-dark);
+      color: white;
+    }
+
+    .chatbot-input::placeholder {
+      color: rgba(0, 0, 0, 0.5);
+    }
+
+    body.dark-mode .chatbot-input::placeholder {
+      color: rgba(255, 255, 255, 0.5);
+    }
+
+    .chatbot-input:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 2px rgba(0, 217, 136, 0.1);
+    }
+
+    .chatbot-send {
+      background: var(--accent);
+      color: white;
+      border: none;
+      padding: 0.8rem 1.2rem;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 600;
+      transition: var(--transition);
+    }
+
+    .chatbot-send:hover:not(:disabled) {
+      background: #00c86b;
+      transform: translateY(-2px);
+    }
+
+    .chatbot-send:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+
+    .chatbot-footer {
+      padding: 0.8rem;
+      text-align: center;
+      font-size: 0.8rem;
+      border-top: 1px solid var(--border);
+      color: rgba(0, 0, 0, 0.6);
+    }
+
+    body.dark-mode .chatbot-footer {
+      border-top-color: var(--border-dark);
+      color: rgba(255, 255, 255, 0.6);
+    }
+
+    .chatbot-footer a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    /* Chatbot Setup Modal */
+    .chatbot-modal {
+      display: none;
+      position: fixed;
+      z-index: 10000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      animation: fadeIn 0.3s ease-out;
+    }
+
+    .chatbot-modal-content {
+      background-color: white;
+      margin: 5% auto;
+      padding: 2rem;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+      max-height: 80vh;
+      overflow-y: auto;
+    }
+
+    body.dark-mode .chatbot-modal-content {
+      background-color: var(--secondary);
+      color: white;
+    }
+
+    .chatbot-modal-close {
+      color: #aaa;
+      float: right;
+      font-size: 2rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: var(--transition);
+    }
+
+    .chatbot-modal-close:hover {
+      color: var(--accent);
+    }
+
+    .chatbot-modal h2 {
+      margin-top: 0;
+      color: var(--primary);
+    }
+
+    body.dark-mode .chatbot-modal h2 {
+      color: var(--accent);
+    }
+
+    .api-options {
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+      margin: 1.5rem 0;
+      padding: 1rem;
+      background: rgba(0, 0, 0, 0.05);
+      border-radius: 8px;
+    }
+
+    body.dark-mode .api-options {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .api-options label {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      cursor: pointer;
+      font-weight: 500;
+    }
+
+    .api-input-group {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      margin: 1rem 0;
+    }
+
+    .api-input-group label {
+      font-weight: 600;
+      color: var(--primary);
+    }
+
+    body.dark-mode .api-input-group label {
+      color: var(--accent);
+    }
+
+    .api-input-group input {
+      padding: 0.8rem;
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      font-family: monospace;
+      font-size: 0.9rem;
+    }
+
+    body.dark-mode .api-input-group input {
+      background: rgba(255, 255, 255, 0.1);
+      border-color: var(--border-dark);
+      color: white;
+    }
+
+    .api-input-group button {
+      background: transparent;
+      border: 1px solid var(--border);
+      padding: 0.5rem;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.9rem;
+      transition: var(--transition);
+    }
+
+    .api-input-group button:hover {
+      background: var(--accent);
+      color: white;
+      border-color: var(--accent);
+    }
+
+    .api-links {
+      margin: 1.5rem 0;
+      padding: 1rem;
+      background: rgba(0, 217, 136, 0.1);
+      border-radius: 8px;
+    }
+
+    body.dark-mode .api-links {
+      background: rgba(0, 217, 136, 0.2);
+    }
+
+    .api-links a {
+      color: var(--primary);
+      font-weight: 600;
+    }
+
+    body.dark-mode .api-links a {
+      color: var(--accent);
+    }
+
+    #saveApiKey {
+      width: 100%;
+      margin-top: 1rem;
+    }
+
+    @media (max-width: 768px) {
+      #harshChatbotWidget {
+        width: 100%;
+        height: 100%;
+        bottom: 0;
+        right: 0;
+        border-radius: 0;
+      }
+
+      .message-content {
+        max-width: 90%;
+      }
+    }
   </style>
 </head>
 <body>
@@ -758,10 +1121,10 @@
 <header>
   <div class="container">
     <nav>
-      <div class="logo">
-        <img src="logo.svg" alt="Harsh Mishra logo" class="site-logo" />
-        <span class="logo-text">HM</span>
-      </div>
+      <a class="logo" href="index.html" aria-label="Home">
+        <img src="logo.svg?v=2" alt="Harsh Mishra logo" class="site-logo" />
+        <span class="logo-text">HarsH</span>
+      </a>
       <button class="menu-toggle" id="menuToggle">☰</button>
       <ul class="nav-links" id="navLinks">
         <li><a href="#about">About</a></li>
@@ -1197,11 +1560,15 @@
   contactForm.addEventListener('submit', (e) => {
     e.preventDefault();
     const formData = new FormData(contactForm);
-    const mailtoLink = `mailto:harsh1991mishra@gmail.com?subject=${encodeURIComponent(formData.get('subject'))}&body=${encodeURIComponent(`Name: ${formData.get('name')}\nEmail: ${formData.get('email')}\n\n${formData.get('message')`)}`;
+    const bodyText = `Name: ${formData.get('name')}\nEmail: ${formData.get('email')}\n\n${formData.get('message')}`;
+    const mailtoLink = `mailto:harsh1991mishra@gmail.com?subject=${encodeURIComponent(formData.get('subject'))}&body=${encodeURIComponent(bodyText)}`;
     window.location.href = mailtoLink;
     contactForm.reset();
   });
 </script>
+
+<!-- Load AI Chatbot -->
+<script src="chatbot.js"></script>
 
 </body>
 </html>
