Add simulator integration and update styles
- Add board simulator section with Arduino, ESP32, and Raspberry Pi Pico support
- Integrate Monaco editor for code editing
- Add Python (Pyodide) and JavaScript runtime support
- Include drag-and-drop component system for LEDs, buttons, and sensors
- Add serial monitor for runtime output
- Update HTML and CSS for simulator styles
- Include simulator.js and simulator.css files

--- a/index.html
+++ b/index.html
@@ -1115,6 +1115,7 @@
       }
     }
   </style>
+  <link rel="stylesheet" href="simulator/simulator.css">
 </head>
 <body>
 
@@ -1569,6 +1570,8 @@
 
 <!-- Load AI Chatbot -->
 <script src="chatbot.js"></script>
+<!-- Load Board Simulator -->
+<script src="simulator/simulator.js"></script>
 
 </body>
 </html>
