--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Data Analyst, AI, IoT, Cyber Security, Machine Learning, Power BI, Data Analytics, Security, Privacy">
   <meta name="author" content="Harsh Mishra">
   <meta name="theme-color" content="#0b6b3a">
-  <meta property="og:title" content="Harsh Mishra - Data Analyst, AI & IoT Frontier">
+  <meta property="og:title" content="Harsh Mishra - Data Analyst, AI & IoT frontier, Cyber Security enthusiast">
   <meta property="og:description" content="Data Analyst passionate about AI/ML, IoT innovation, and Cyber Security. Decoding data, securing digital dreams.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://harsh1991mishra.github.io/">
@@ -16,7 +16,7 @@
   <link rel="canonical" href="https://harsh1991mishra.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@harsh1991mishra" />
-  <meta name="twitter:title" content="Harsh Mishra - Data Analyst, AI & IoT Frontier" />
+  <meta name="twitter:title" content="Harsh Mishra - Data Analyst, AI & IoT frontier, Cyber Security enthusiast" />
   <meta name="twitter:description" content="Data Analyst | AI frontier 🚀 | Cyber Security enthusiast | Decoding data, securing digital dreams." />
   <meta name="twitter:image" content="https://raw.githubusercontent.com/harsh1991mishra/harsh1991mishra.github.io/main/favicon.svg" />
   <script type="application/ld+json">
@@ -26,7 +26,7 @@
     "name": "Harsh Mishra",
     "url": "https://harsh1991mishra.github.io/",
     "sameAs": ["https://github.com/harsh1991mishra","https://www.linkedin.com/in/harsh1991mishra"],
-    "jobTitle": "Data Analyst, AI & IoT Frontier, Cyber Security Enthusiast",
+    "jobTitle": "Data Analyst, AI & IoT frontier, Cyber Security enthusiast",
     "description": "Data professional focused on analytics, AI/ML integration, IoT solutions, and cyber security.",
     "address": { "@type": "PostalAddress", "addressLocality": "Noida", "addressRegion": "Uttar Pradesh", "addressCountry": "IN" }
   }
@@ -1146,7 +1146,7 @@
     <!-- Replace PROFILE_PIC_URL_HERE with your LinkedIn image URL or GitHub avatar -->
     <img id="profilePhoto" class="profile-photo" src="https://avatars.githubusercontent.com/u/93046472?s=400&u=c73c07e9d4c5a0737fd6a9e61edb8b1fc771f314&v=4" alt="Harsh Mishra profile photo">
     <h1>Harsh Mishra</h1>
-    <div class="hero-role">Data Analyst, AI & IoT frontier 🚀 | Cyber Security enthusiast</div>
+    <div class="hero-role">Data Analyst, AI & IoT frontier 🚀, Cyber Security enthusiast</div>
     <p class="hero-tagline">I am a Data Analyst, AI frontier 🚀 | Cyber Security enthusiast | Decoding data, securing digital dreams 💻🔒 Cyber Security trails 🕵️‍♂️ | Sharing learnings, tips & tech tales 📚 #DataAnalytics #ArtificialIntelligence #CyberSecurity #AI #CyberSecurity | Specialized in privacy compliance, system automation, IoT innovation, and AI/ML solutions. Transforming complex challenges into elegant, scalable systems.</p>
     <div class="cta-buttons">
       <a href="#projects" class="btn btn-primary">View My Work</a>
